fix: rebased branch

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 		<maven-build-cache.version>1.1.0</maven-build-cache.version>
 		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
 		<lombok.version>1.18.32</lombok.version>
+		<mapstruct.version>1.5.5.Final</mapstruct.version>
+		<mapstruct-lombok-binding.version>0.2.0</mapstruct-lombok-binding.version>
 	</properties>
 
 	<dependencyManagement>
@@ -109,6 +111,13 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<!-- MAPSTRUCT -->
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>${mapstruct.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -132,6 +141,16 @@
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 							<version>${lombok.version}</version>
+						</path>
+						<path>
+							<groupId>org.mapstruct</groupId>
+							<artifactId>mapstruct-processor</artifactId>
+							<version>${mapstruct.version}</version>
+						</path>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok-mapstruct-binding</artifactId>
+							<version>${mapstruct-lombok-binding.version}</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
