--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -42,6 +42,7 @@ logging:
     '[org.hibernate.orm]': debug
     '[org.hibernate.type.descriptor.sql.BasicBinder]': trace
     '[org.springframework.boot]': info
+    #'[org.springframework.security]': DEBUG
 
 spring-doc:
   swagger-ui:
