feat: mapstruct to UserBook
added Mapstruct in getUserBooks method, added custom exception, fixed JsonProperty order in DTO

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -43,6 +43,7 @@ logging:
     '[org.hibernate.type.descriptor.sql.BasicBinder]': trace
     '[org.springframework.boot]': info
     #'[org.springframework.security]': DEBUG
+    #'[com.fasterxml.jackson.databind]': DEBUG
 
 spring-doc:
   swagger-ui:
